markup & style works section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                                 Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</div>
                         </div>
                     </div>
+
                     <div class="features__column">
                         <div class="features__item">
                             <img class="features__icon" src="/img/features/responsive.png" alt="Responsive Ready">
@@ -99,6 +100,72 @@
                         </div>
                     </div>
                 </div>
+            </section>
+            <section class="works">
+                <div class="works__item">
+                    <img class="works__image" src="img/works/work1.jpg" alt="work1">
+                    <div class="works__content">
+                        <div class="works__title">Project Name</div>
+                        <div class="works__text">User Interface Design</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="img/works/work2.jpg" alt="work2">
+                    <div class="works__content">
+                        <div class="works__title">Project Name</div>
+                        <div class="works__text">User Interface Design</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="img/works/work3.jpg" alt="work3">
+                    <div class="works__content">
+                        <div class="works__title">Project Name</div>
+                        <div class="works__text">User Interface Design</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="img/works/work4.jpg" alt="work4">
+                    <div class="works__content">
+                        <div class="works__title">Project Name</div>
+                        <div class="works__text">User Interface Design</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="img/works/work5.jpg" alt="work5">
+                    <div class="works__content">
+                        <div class="works__title">Project Name</div>
+                        <div class="works__text">User Interface Design</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="img/works/work6.jpg" alt="work6">
+                    <div class="works__content">
+                        <div class="works__title">Project Name</div>
+                        <div class="works__text">User Interface Design</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="img/works/work7.jpg" alt="work7">
+                    <div class="works__content">
+                        <div class="works__title">Project Name</div>
+                        <div class="works__text">User Interface Design</div>
+                    </div>
+                </div>
+
+                <div class="works__item">
+                    <img class="works__image" src="img/works/work8.jpg" alt="work8">
+                    <div class="works__content">
+                        <div class="works__title">Project Name</div>
+                        <div class="works__text">User Interface Design</div>
+                    </div>
+                </div>
+
             </section>
         </main>
 
