--- a/index.html
+++ b/index.html
@@ -349,11 +349,69 @@
                     </div>
                 </div>
             </section>
+            <section class="download">
+                <div class="download__container">
+                    <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
+                    <div class="download__text">
+                        <p>Fusce dapibus, tellus ac cursus commodo</p>
+                    </div>
+                    <a href="#" class="btn btn_red btn_long">Download Here</a>
+                </div>
+            </section>
         </main>
 
-        <!-- <footer class="footer">
-            Footer
-        </footer> -->
+        <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__inner">
+                    <div class="footer__block">
+                        <h4 class="footer__title">Location</h4>
+                        <address class="footer__address">
+                            <p>3481 Melrose Place</p>
+                            <p>Beverly Hills, CA 90210</p>
+                        </address>
+                    </div>
+
+                    <div class="footer__block">
+                        <h4 class="footer__title">Location</h4>
+                        <div class="social social_footer">
+                            <a href="#" class="social__item" target="_blank">
+                                <svg class="social__icon">
+                                    <use xlink:href="#fb"></use>
+                                </svg>
+                            </a>
+                            <a href="#" class="social__item" target="_blank">
+                                <svg class="social__icon">
+                                    <use xlink:href="#tw"></use>
+                                </svg>
+                            </a>
+                            <a href="#" class="social__item" target="_blank">
+                                <svg class="social__icon">
+                                    <use xlink:href="#in"></use>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="footer__block">
+                        <h4 class="footer__title">About ActiveBox</h4>
+                        <div class="footer__text">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non
+                                metus auctor fringilla.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="copyright">
+                <div class="copyright__container">
+                    <div class="copyright__text">
+                        <div>Copyright © 2015 ActiveBox. All Rights Reserved</div>
+                        <div>Made with ❤️ <span>by Kamal Chaneman</span></div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
