--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                         <a href="#" class="nav__link">Testimonials</a>
                         <a href="#" class="nav__link">Download</a>
                     </nav>
+
+                    <button class="burger" type="button">
+                        <span class="burger__item">Menu</span>
+                    </button>
                 </div>
             </div>
         </header>
@@ -400,7 +404,6 @@
                         </div>
                     </div>
                 </div>
-
 
             </div>
             <div class="copyright">
