--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Active Box page" />
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="img/favicons/site.webmanifest">
+    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Styles -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     <title>Active Box</title>
 </head>
 
@@ -34,21 +51,21 @@
     </svg>
 
     <div class="wrapper">
-        <header class="header">
+        <header class="header" id="header">
             <div class="header__container">
                 <div class="header__inner">
                     <div class="header__logo">
                         <img src="img/logo.png" alt="logo">
                     </div>
-                    <nav class="nav">
-                        <a href="#" class="nav__link">Features</a>
-                        <a href="#" class="nav__link">Works</a>
-                        <a href="#" class="nav__link">Our Team</a>
-                        <a href="#" class="nav__link">Testimonials</a>
-                        <a href="#" class="nav__link">Download</a>
+                    <nav class="nav" id="nav">
+                        <a href="#" class="nav__link" data-scroll="#features">Features</a>
+                        <a href="#" class="nav__link" data-scroll="#works">Works</a>
+                        <a href="#" class="nav__link" data-scroll="#team">Our Team</a>
+                        <a href="#" class="nav__link" data-scroll="#reviews">Testimonials</a>
+                        <a href="#" class="nav__link" data-scroll="#download">Download</a>
                     </nav>
 
-                    <button class="burger" type="button">
+                    <button class="burger" type="button" id="navToggle">
                         <span class="burger__item">Menu</span>
                     </button>
                 </div>
@@ -56,7 +73,7 @@
         </header>
 
         <main class="main">
-            <section class="intro">
+            <section class="intro" id="intro">
                 <div class="intro__container">
                     <div class="intro__inner">
                         <h1 class="intro__title">
@@ -70,7 +87,7 @@
                     </div>
                 </div>
             </section>
-            <section class="features">
+            <section class="features" id="features">
                 <div class="features__container">
                     <div class="features__inner">
                         <div class="features__column">
@@ -129,7 +146,7 @@
                     </div>
                 </div>
             </section>
-            <section class="works">
+            <section class="works" id="works">
                 <div class="works__item">
                     <img class="works__image" src="img/works/work1.jpg" alt="work1">
                     <div class="works__content">
@@ -195,7 +212,7 @@
                 </div>
 
             </section>
-            <section class="team">
+            <section class="team" id="team">
                 <div class="team__container">
                     <div class="team__inner">
                         <div class="team__item">
@@ -336,24 +353,46 @@
                     </div>
                 </div>
             </section>
-            <section class="reviews">
+            <section class="reviews" id="reviews">
                 <div class="reviews__container">
-                    <div class="reviews__item">
-                        <div class="reviews__photo">
-                            <img src="img/reviews/testimonial1.jpg" alt="" class="reviews__image">
+                    <div class="reviews__slider" id="reviewsSlider">
+                        <div class="slick-item">
+                            <div class="reviews__item">
+                                <div class="reviews__photo">
+                                    <img src="img/reviews/testimonial1.jpg" alt="" class="reviews__image">
+                                </div>
+                                <div class="reviews__content">
+                                    <div class="reviews__text">
+                                        “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed
+                                        odio
+                                        dui. Aenean eu leo quam...”</div>
+                                    <div class="reviews__author">
+                                        Susan Sims, Interaction Designer at XYZ
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="reviews__content">
-                            <div class="reviews__text">
-                                “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio
-                                dui. Aenean eu leo quam...”</div>
-                            <div class="reviews__author">
-                                Susan Sims, Interaction Designer at XYZ
+
+                        <div class="slick-item">
+                            <div class="reviews__item">
+                                <div class="reviews__photo">
+                                    <img src="img/reviews/testimonial1.jpg" alt="" class="reviews__image">
+                                </div>
+                                <div class="reviews__content">
+                                    <div class="reviews__text">
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatem placeat
+                                        aspernatur repellendus!
+                                    </div>
+                                    <div class="reviews__author">
+                                        Susan Sims, Interaction Designer at XYZ
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="download">
+            <section class="download" id="download">
                 <div class="download__container">
                     <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
                     <div class="download__text">
@@ -416,6 +455,9 @@
             </div>
         </footer>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
