add second photo for reviews section

--- a/index.html
+++ b/index.html
@@ -354,43 +354,45 @@
                 </div>
             </section>
             <section class="reviews" id="reviews">
-                <div class="reviews__container">
-                    <div class="reviews__slider" id="reviewsSlider">
-                        <div class="slick-item">
-                            <div class="reviews__item">
-                                <div class="reviews__photo">
-                                    <img src="img/reviews/testimonial1.jpg" alt="" class="reviews__image">
-                                </div>
-                                <div class="reviews__content">
-                                    <div class="reviews__text">
-                                        “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed
-                                        odio
-                                        dui. Aenean eu leo quam...”</div>
-                                    <div class="reviews__author">
-                                        Susan Sims, Interaction Designer at XYZ
-                                    </div>
+                <!-- <div class="reviews__container"> -->
+                <div class="reviews__slider" id="reviewsSlider">
+                    <div class="slick-item">
+                        <div class="reviews__item">
+                            <div class="reviews__photo">
+                                <img src="img/reviews/testimonial1.jpg" alt="" class="reviews__image">
+                            </div>
+
+                            <div class="reviews__content">
+                                <div class="reviews__text">
+                                    “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed
+                                    odio
+                                    dui. Aenean eu leo quam...”</div>
+                                <div class="reviews__author">
+                                    Susan Sims, Interaction Designer at XYZ
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="slick-item">
-                            <div class="reviews__item">
-                                <div class="reviews__photo">
-                                    <img src="img/reviews/testimonial1.jpg" alt="" class="reviews__image">
+                    <div class="slick-item">
+                        <div class="reviews__item">
+                            <div class="reviews__photo">
+                                <img src="img/reviews/testimonial2.jpg" alt="" class="reviews__image">
+                            </div>
+
+                            <div class="reviews__content">
+                                <div class="reviews__text">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatem placeat
+                                    aspernatur repellendus!
                                 </div>
-                                <div class="reviews__content">
-                                    <div class="reviews__text">
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatem placeat
-                                        aspernatur repellendus!
-                                    </div>
-                                    <div class="reviews__author">
-                                        Susan Sims, Interaction Designer at XYZ
-                                    </div>
+                                <div class="reviews__author">
+                                    Lorein Ipsum, CEO at XYZ
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- </div> -->
             </section>
             <section class="download" id="download">
                 <div class="download__container">
